# Map-Alignment-Nonrigid-Optimization-2D

./: .test.py.swp  CoordinateDisplayer.py  Homography.cc  Optimizer.py  demo.py  test.txt
api/: CPPConnector.py  api.py
api/storage/alignment/input/: ave_sym_dist.json  max_num_iter.json
api/storage/alignment/input/parameters/: parameters.json
api/storage/alignment/input/points/: points.json
api/storage/alignment/output/: matrix.json
api/storage/maps/: maps.json
api/storage/optimization/input/: parameters.json
initial_alignment/: CMakeLists.txt  Homography.cc
optimize_alignment/: optimize_alignment.py  plotting.py
proj_ceres/: CMakeLists.txt  Homography.cc
